@@ -21,6 +21,24 @@ black_scholes <- function(spot = 105, strike = 100, vol = 5, r = 1.25 / 100, tau
     .Call('_RcppFastAD_black_scholes', PACKAGE = 'RcppFastAD', spot, strike, vol, r, tau)
 }
 
+#' Evaluate a squared-loss linear regression at a given parameter value
+#'
+#' Not that this function does not actually fit the model. Rather it evaluates
+#' the squared sum of residuals and \sQuote{gradient} of parameters.
+#'
+#' @param theta_hat Vector of parameters
+#' @param y Vector with dependent variable
+#' @param X Matrix with independent explanatory variables
+#' @return A list object with the \sQuote{loss} and \sQuote{gradient}
+#' @examples
+#' beta_guess <- c(1,2)
+#' y <- c(32,64,96,128,160)
+#' X <- matrix(c(1,10,2,20,3,30,4,40,5,50), ncol=2, byrow=TRUE)
+#' linear_regression(beta_guess, y, X)
+linear_regression <- function(theta_hat, y, X) {
+    .Call('_RcppFastAD_linear_regression', PACKAGE = 'RcppFastAD', theta_hat, y, X)
+}
+
 #' Compute the value and derivate of a quadratic expression X' * Sigma * X
 #'
 #' @param X A 2 element vector
