@@ -1,3 +1,3 @@
 #!/bin/sh
 
-rm -f src/*.o src/*.so
+rm -f src/*.o src/*.so *~ */*~
