@@ -1,3 +1,11 @@
+2023-02-22  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/linear_regression.cpp: Example of evaluating a linear
+	regression at a given parameter estimate
+	* man/linear_regression.Rd: Idem
+        * src/RcppExport.cpp: Idem
+        * R/RcppExports.R: Idem
+
 2023-02-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/black_scholes.cpp (black_scholes): Also provide rho and theta
